--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using AssessmentUserInterface
 @using AssessmentUserInterface.Shared
+@using Microsoft.AspNetCore.Components.Web
+@using AssessmentUserInterface.Models
+@using AssessmentUserInterface.Components
