Added About me, and added NavMenu changes.

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>AssessmentUserInterface</PageTitle>
+<PageTitle>Creditserve Assessment</PageTitle>
 
 <div class="page">
     <div class="sidebar">
