Updating About Me

--- a/Components/AboutMe.razor
+++ b/Components/AboutMe.razor
@@ -16,6 +16,7 @@
                         <ul>Add a user authentication system</ul>
                         <ul>Add some validation to limit odd user names and such as well as blank names and emails.</ul>
                         <ul>Add a search feature to the user list.</ul>
+                        <ul>Testing for the CRUD operations.</ul>
                     </p>
                 </div>
             </div>
